<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_coffee"
            android:layout_width="80dp"
            android:layout_height="150dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/coffee_name"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@+id/img_coffee"
            app:layout_constraintTop_toTopOf="@+id/img_coffee" />

        <TextView
            android:id="@+id/tv_coffee_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="10.00"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/img_coffee"
            app:layout_constraintTop_toBottomOf="@+id/img_coffee"/>

        <TextView
            android:id="@+id/tv_coffee_tl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/tl"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_coffee_price"
            app:layout_constraintTop_toTopOf="@+id/tv_coffee_price"/>

        <RadioGroup
            android:id="@+id/rg_coffee_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_coffee"
            app:layout_constraintTop_toBottomOf="@+id/tv_coffee_name">

            <RadioButton
                android:id="@+id/rb_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/small"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medium"
                android:textSize="12sp" />

            <RadioButton
                android:id="@+id/rb_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/large"
                android:textSize="12sp" />

        </RadioGroup>


        <CheckBox
            android:id="@+id/cb_cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cream"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@+id/rg_coffee_size"
            app:layout_constraintTop_toBottomOf="@+id/rg_coffee_size" />

        <CheckBox
            android:id="@+id/cb_chocolate_syrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:text="@string/chocolate_syrub"
            app:layout_constraintStart_toEndOf="@+id/cb_cream"
            app:layout_constraintTop_toTopOf="@+id/cb_cream" />

        <Switch
            android:id="@+id/sw_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar"
            app:layout_constraintStart_toStartOf="@+id/cb_cream"
            app:layout_constraintTop_toBottomOf="@+id/cb_cream"
            tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <Button
            android:id="@+id/btn_add_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:text="@string/add"
            app:layout_constraintBottom_toBottomOf="@+id/tv_coffee_tl"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sw_sugar"
            app:layout_constraintStart_toStartOf="@+id/sw_sugar" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="73dp"
            android:layout_height="19dp"
            android:layout_marginStart="4dp"
            android:layout_marginBottom="1dp"
            android:entries="@array/CoffeeAmount"
            app:layout_constraintBottom_toBottomOf="@+id/tv_amount"
            app:layout_constraintStart_toEndOf="@+id/tv_amount" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>