<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/img_order_coffee"
            android:layout_width="79dp"
            android:layout_height="131dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_order_coffee_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/coffee_name"
            app:layout_constraintStart_toEndOf="@+id/img_order_coffee"
            app:layout_constraintTop_toTopOf="@+id/img_order_coffee" />

        <TextView
            android:id="@+id/tv_order_coffee_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/coffee_size"
            app:layout_constraintStart_toStartOf="@+id/tv_order_coffee_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_coffee_name" />

        <TextView
            android:id="@+id/tv_order_coffee_sugar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Şekerli/Şekersiz"
            app:layout_constraintStart_toStartOf="@+id/tv_order_coffee_size"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_coffee_size" />

        <TextView
            android:id="@+id/tv_order_coffee_amount_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/amount"
            app:layout_constraintStart_toStartOf="@+id/tv_order_coffee_sugar"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_coffee_sugar" />

        <TextView
            android:id="@+id/tv_order_coffee_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="10.00"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@+id/img_order_coffee"
            app:layout_constraintTop_toBottomOf="@+id/img_order_coffee" />

        <TextView
            android:id="@+id/tv_order_coffee_tl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="TL"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/tv_order_coffee_price"
            app:layout_constraintTop_toTopOf="@+id/tv_order_coffee_price"/>

        <TextView
            android:id="@+id/tv_order_coffee_extras"
            android:layout_width="98dp"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_order_coffee_price"
            app:layout_constraintStart_toStartOf="@+id/tv_order_coffee_amount_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_order_coffee_amount_title" />

        <TextView
            android:id="@+id/tv_order_coffee_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_marginLeft="4dp"
            app:layout_constraintStart_toEndOf="@id/tv_order_coffee_amount_title"
            app:layout_constraintTop_toTopOf="@id/tv_order_coffee_amount_title"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>